--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
