--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@mui/system": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "jwt-decode": "^4.0.0",
@@ -21,6 +26,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
