--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,14 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
+    "react-syntax-highlighter": "^15.5.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
