--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.20",
     "@mui/system": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
