--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.48.2",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
